fixed introcta on ios devices

--- a/builds/development/css/ccclandstyle.css
+++ b/builds/development/css/ccclandstyle.css
@@ -402,14 +402,7 @@ header .fullheight .introcta:before, header .fullheight .introcta:after {
 header .fullheight .introcta:after {
   clear: both;
 }
-@media (min-width: 600px) {
-  /* line 37, ../../../components/sass/modules/_intro.scss */
-  header .fullheight .introcta {
-    -webkit-justify-content: center;
-    justify-content: center;
-  }
-}
-/* line 48, ../../../components/sass/modules/_intro.scss */
+/* line 44, ../../../components/sass/modules/_intro.scss */
 header .fullheight .introcta .introtext {
   font-family: "Permanent Marker", sans-serif;
   color: #F69627;
@@ -418,7 +411,7 @@ header .fullheight .introcta .introtext {
   padding: 0;
   margin: auto 0;
 }
-/* line 58, ../../../components/sass/modules/_intro.scss */
+/* line 54, ../../../components/sass/modules/_intro.scss */
 header .fullheight .introcta #handarrow {
   width: 55px;
   height: 55px;
@@ -427,7 +420,7 @@ header .fullheight .introcta #handarrow {
   fill: #F69627;
   padding-top: 10px;
 }
-/* line 71, ../../../components/sass/modules/_intro.scss */
+/* line 67, ../../../components/sass/modules/_intro.scss */
 header .fullheight .titletext {
   display: -webkit-flex;
   display: flex;
@@ -456,15 +449,16 @@ header .fullheight .titletext:after {
   clear: both;
 }
 @media (min-width: 600px) {
-  /* line 71, ../../../components/sass/modules/_intro.scss */
+  /* line 67, ../../../components/sass/modules/_intro.scss */
   header .fullheight .titletext {
     background-image: none;
     -webkit-flex-direction: column;
     flex-direction: column;
+    -webkit-flex-grow: 1;
     flex-grow: 1;
   }
 }
-/* line 91, ../../../components/sass/modules/_intro.scss */
+/* line 87, ../../../components/sass/modules/_intro.scss */
 header .fullheight .titletext h1 {
   color: #F69627;
   text-align: left;
@@ -474,12 +468,12 @@ header .fullheight .titletext h1 {
   padding-right: 3px;
 }
 @media (min-width: 960px) {
-  /* line 91, ../../../components/sass/modules/_intro.scss */
+  /* line 87, ../../../components/sass/modules/_intro.scss */
   header .fullheight .titletext h1 {
     font-size: 2.5em;
   }
 }
-/* line 106, ../../../components/sass/modules/_intro.scss */
+/* line 102, ../../../components/sass/modules/_intro.scss */
 header .fullheight .titletext h2 {
   color: #1270C8;
   font-family: "Slabo 27px", serif;
@@ -489,13 +483,13 @@ header .fullheight .titletext h2 {
   text-shadow: #989898 1px 1px 1px;
 }
 @media (min-width: 960px) {
-  /* line 106, ../../../components/sass/modules/_intro.scss */
+  /* line 102, ../../../components/sass/modules/_intro.scss */
   header .fullheight .titletext h2 {
     font-size: 2.75em;
   }
 }
 @media (min-width: 600px) {
-  /* line 121, ../../../components/sass/modules/_intro.scss */
+  /* line 117, ../../../components/sass/modules/_intro.scss */
   header .fullheight .left {
     -webkit-align-items: flex-start;
     align-items: flex-start;
@@ -1127,6 +1121,23 @@ body form.hs-form .hs-form-field ul.inputs-list {
 }
 
 /* line 117, ../../../components/sass/modules/_main.scss */
+#leslie {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/leslie.jpg");
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 200px;
+}
+
+/* line 122, ../../../components/sass/modules/_main.scss */
 #stephanie {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/stephanie.png");
   -moz-border-radius: 50%;
@@ -1143,7 +1154,7 @@ body form.hs-form .hs-form-field ul.inputs-list {
   height: 200px;
 }
 
-/* line 122, ../../../components/sass/modules/_main.scss */
+/* line 127, ../../../components/sass/modules/_main.scss */
 #toni {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("../images/toni.jpg");
   -moz-border-radius: 50%;
